fix scrollbars in IE

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -246,7 +246,7 @@ h1, h2, h3, h4, h5 {
 .JsonEditor {
   width: 100%;
   height: 90%;
-  overflow: scroll;
+  overflow: auto;
   opacity: 0;
   z-index: 1;
   @include transform(translateX(-1em));
@@ -368,7 +368,7 @@ h1, h2, h3, h4, h5 {
   width: 100%;
   height: 90%;
   display: block;
-  overflow: scroll;
+  overflow: auto;
   z-index: 1;
   @include transform(translateX(1em));
   opacity: 0;
